--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -18,8 +18,8 @@ a {
 .btn {
   display: inline-block;
   margin-bottom: 1rem;
-  color: rgba(255, 255, 255, 0.7);
-  background-color: rgba(255, 255, 255, 0.08);
+  color: rgba(255, 255, 255, 1);
+  background-color: rgba(192,192,192,0.6);
   border-color: rgba(255, 255, 255, 0.2);
   border-style: solid;
   border-width: 1px;
@@ -57,7 +57,12 @@ a {
   color: #fff;
   text-align: center;
   background-color: #159957;
-  background-image: linear-gradient(120deg, #155799, #159957); }
+  background-image: url("https://planetgallery.global.ssl.fastly.net/web/auckland-20160630-web.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+ }
+
 
 @media screen and (min-width: 64em) {
   .page-header {
